// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchRecords page renders error alert if error occurs during search 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <Alert
    allowDismiss={false}
    dismissTitle="Click to dismiss this alert"
    message="Error has occurred during request and request cannot be processed. Please contact eSpace administrators or try again later."
    showLoader={false}
    title="Error"
    type="error_outline"
  />
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page renders loading screen while export publications loading 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  />
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should render loading screen while export publications loading 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <span>
          Searching for publications...
        </span>
        <PublicationsListSorting
          disabled={true}
          onExportPublications={[Function]}
          onPageSizeChanged={[Function]}
          onSortByChanged={[Function]}
          pageSize={20}
          sortBy="published_date"
          sortDirection="Desc"
        />
        <PublicationsListPaging
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
        <div
          className="is-centered"
        >
          <InlineLoader
            message="Exporting search results..."
          />
        </div>
        <PublicationsListPaging
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should render loading screen while loading publications while filtering 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={true}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for publications..."
    />
  </div>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <span>
          Searching for publications...
        </span>
        <PublicationsListSorting
          disabled={true}
          onExportPublications={[Function]}
          onPageSizeChanged={[Function]}
          onSortByChanged={[Function]}
          pageSize={20}
          sortBy="published_date"
          sortDirection="Desc"
        />
        <PublicationsListPaging
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
        <div
          className="is-centered"
        >
          <InlineLoader
            message="Searching for publications..."
          />
        </div>
        <PublicationsListPaging
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should render loading screen while loading search results 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={true}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for publications..."
    />
  </div>
  <div
    className="columns"
  />
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should render no results 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should render placeholders 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  />
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets OA selected (even if there are no results) 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "showOpenAccessOnly": true,
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets filter selected (even if there are no results) 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {
            "Display type": 179,
          },
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets range selected (even if there are no results) 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "ranges": Object {
            "Year published": Object {
              "from": 2015,
              "to": 2018,
            },
          },
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`SearchRecords page should show available filters or selected filters if publicationsListFacets returned (even if there are no results) 1`] = `
<WithStyles(StandardPage)
  className="page-search-records"
>
  <StandardCard
    className="searchComponent"
  >
    <withRouter(Connect(SearchComponent))
      activeFacets={
        Object {
          "filters": Object {},
          "ranges": Object {},
        }
      }
      className="search-body"
      facetsChanged={[Function]}
      searchLoading={false}
      showAdvancedSearchButton={true}
      updateFacetExcludesFromSearchFields={[Function]}
    />
  </StandardCard>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </div>
    <div
      className="column is-3 is-hidden-mobile"
    >
      <StandardRighthandCard
        title="Refine results"
      >
        <FacetsFilter
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          disabled={false}
          excludeFacetsList={Array []}
          facetsData={
            Object {
              "Another facet": 2,
              "Some facet": 1,
            }
          }
          lookupFacetsList={
            Object {
              "Author": "Author (lookup)",
              "Collection": "Collection (lookup)",
              "Subject": "Subject (lookup)",
            }
          }
          onFacetsChanged={[Function]}
          renameFacetsList={
            Object {
              "Display type": "Publication type",
              "Subtype": "Publication subtype",
            }
          }
          showOpenAccessFilter={true}
        />
      </StandardRighthandCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;
